@@ -4,6 +4,11 @@ ctms-commons history
 1.0.1
 -----
 
+### core
+
+- Return build name as BuildInfo#toString.
+- Treat OSGI-style .DEV revisions as snapshots in BuildInfo.
+
 ### all
 
 - Updated ivy4r dependency to 0.11.0.
